--- a/macro.html
+++ b/macro.html
@@ -4,7 +4,7 @@
     
     <title>Macro</title>
 
-    <link rel="stylesheet" href="/Macro P/macro.css">
+    <link rel="stylesheet" href="/macro.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 
     </div>
     <div class="main-right">
-        <img src="/Macro P/images/dweep io 1.png" alt="">
+        <img src="/images/dweep io 1.png" alt="">
 
     </div>
     </div>
@@ -40,8 +40,8 @@
         <div class="footer-right">
             Dweep.io<br>
             Made with love in India<br>
-            <img id="linked" src="/Macro P/images/LinkedinLogo.png">
-            <img id="Instagram" src="/Macro P/images/InstagramLogo.png"><br>
+            <img id="linked" src="/images/LinkedinLogo.png">
+            <img id="Instagram" src="/images/InstagramLogo.png"><br>
             <br>
             hello@Dweep.io
         </div>
